echo-server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: echoserver-app
  template:
    metadata:
      labels:
        app: echoserver-app
    spec:
      containers:
      - image: ealen/echo-server:latest
        imagePullPolicy: IfNotPresent
        name: echoserver
        ports:
        - containerPort: 80
