classic-nlb-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-nlb1-service
  annotations:
    service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: "public"
    service.kubernetes.io/ibm-load-balancer-cloud-provider-zone: "dal12"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
  selector:
    app: echoserver
